--- a/environment.yaml
+++ b/environment.yaml
@@ -13,3 +13,7 @@ dependencies:
     - transformers==4.29.2
     - opencv-python==4.7.0.72
     - streamlit==1.20.0
+torch==1.9.0
+torch==1.11.0+cu113
+torchvision==0.12.0+cu113
+torchaudio==0.11.0
